app/static/styles.css
body{
    font-family: "Open Sans";
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans.otf") format("otf");
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans-Bold.otf") format("otf");
    font-weight: bold;
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans-Italic.otf") format("otf");
    font-style: italic;
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans-ExtraBold.otf") format("otf");
    font-weight: 900;
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans-Light.otf") format("otf");
    font-weight: 300;
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans-BoldItalic.otf") format("otf");
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans-ExtraBoldItalic.otf") format("otf");
    font-weight: 900;
    font-style: italic;
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSansLight-Italic.otf") format("otf");
    font-weight: 300;
    font-style: italic;
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans-Semibold.otf") format("otf");
    font-weight: 600;
}

@font-face {
    font-family: "Open Sans";
    src: url("../static/fonts/OpenSans-SemiboldItalic.otf") format("otf");
    font-weight: 600;
    font-style: italic;
}

.container-fluid {
    margin-right: 0;
    margin-left: 0;
    padding-left: 0px;
    padding-right: 0px;
}

.header_logo {
    margin-top: 20px;
    width: 183px;
    height: 96px;
}

.navbar .navbar-nav {
    display: inline-block;
    float: none;
}

.navbar .navbar-collapse {
    text-align: center;
}

.hero_image {
    background: url('../static/img/womens_activism_hero_image.png') no-repeat center center;
    height: 100%;
    overflow: hidden;
    color: #FFFFFF;
}

#hero_header {
    font-size: 50px;
    font-family: "Open Sans";
    font-weight: lighter;
    color: rgb(254, 254, 254);
    line-height: 1.3;
    text-align: center;
    -moz-transform: matrix(1.00014568137167, 0, 0, 1.00203740901345, 0, 0);
    -webkit-transform: matrix(1.00014568137167, 0, 0, 1.00203740901345, 0, 0);
    -ms-transform: matrix(1.00014568137167, 0, 0, 1.00203740901345, 0, 0);
}

#hero_message {
    font-size: 22px;
    font-family: "Open Sans";
    font-weight: lighter;
    color: rgb(255, 255, 255);
    line-height: 1.636;
    text-align: center;
}

#hero_action_button {
    border-width: 1.5px;
    border-color: rgb(255, 255, 255);
    border-style: solid;
    width: 229px;
    height: 62px;
    background: transparent;
    font-size: 15.385px;
    font-family: "Open Sans";
    color: rgb(255, 255, 255);
    line-height: 1.2;
    text-align: center;
    -moz-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    -webkit-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    -ms-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
}

#media_action_button_image {
    float: left;
    position: relative;
    border-width: 1.5px;
    border-color: rgb(255, 255, 255);
    border-style: solid;
    width: 110px;
    height: 62px;
    background: transparent;
    font-size: 15.385px;
    font-family: "Open Sans";
    color: rgb(255, 255, 255);
    line-height: 1.2;
    text-align: center;
    -moz-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    -webkit-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    -ms-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
}

#media_action_button_video {
    float: right;
    position: relative;
    border-width: 1.5px;
    border-color: rgb(255, 255, 255);
    border-style: solid;
    width: 110px;
    height: 62px;
    background: transparent;
    font-size: 15.385px;
    font-family: "Open Sans";
    color: rgb(255, 255, 255);
    line-height: 1.2;
    text-align: center;
    -moz-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    -webkit-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    -ms-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
}

.story_counter {
    margin-top: 30px;
    font-family: "Open Sans";
}

#num_stories {
    font-size: 50px;
    font-family: "Open Sans";
    color: rgb(210, 159, 19);
    line-height: 0.6;
    text-align: center;
    -moz-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
    -webkit-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
    -ms-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
}

#stories_description {
    font-size: 50px;
    font-family: "Open Sans";
    font-weight: lighter;
    color: rgb(52, 41, 79);
    line-height: 0.6;
    text-align: center;
    -moz-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
    -webkit-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
    -ms-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
}

.story_image_icon {
    border-radius: 50%;
    opacity: 0.8;
}

#hashtag {
    font-size: 36px;
    font-family: "Open Sans";
    color: rgb(192, 192, 192);
    line-height: 0.889;
    text-align: center;
}

.card {
    border-width: 1.5px;
    border-color: rgb(217, 217, 217);
    border-style: solid;
    padding: 10px;
}
/* ... */

